--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 multidict==6.0.5
 packaging==24.1
+PyJWT==2.8.0
 pyproject_hooks==1.1.0
 python-dotenv==1.0.1
 requests==2.32.3
