update for date parsing

--- a/known_users.json
+++ b/known_users.json
@@ -1,1 +1,1 @@
-{"U3WNT6MUJ": "Arwind Gajadien", "UNMDFHW81": "Kawish Gajadien", "U04QUFZ80U8": "Carido Steinbach", "U02PLSTMG90": "Jolien Eijsink", "U06DFUFSRG8": "Femke"}
+{"U3WNT6MUJ": "Arwind Gajadien", "UNMDFHW81": "Kawish Gajadien", "U04QUFZ80U8": "Carido Steinbach", "U02PLSTMG90": "Jolien Eijsink", "U06DFUFSRG8": "Femke", "U06QXUN2E9L": "Devlin", "U07C7A1L0TC": "Timeline"}
