--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
-
+    listen [::]:80;
+    server_name slack-activity-timeline.crafture.com www.slack-activity-timeline.crafture.com;
+    server_tokens off;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
     location / {
-        proxy_pass http://flask:5000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        return 301 https://slack-activity-timeline.crafture.com$request_uri;
     }
 }
