temp before dns update

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-    location / {
-        return 301 https://slack-activity-timeline.crafture.com$request_uri;
-    }
+    # location / {
+    #     return 301 https://slack-activity-timeline.crafture.com$request_uri;
+    # }
 }
