--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,12 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf/:ro
-      # - ./certbot/www/:/var/www/certbot/:ro
+      - ./certbot/www/:/var/www/certbot/:ro
     depends_on:
       - flask
 
-  # certbot:
-  #   image: certbot/certbot:latest
-  #   volumes:
-  #     - ./certbot/www/:/var/www/certbot/:rw
-  #     - ./certbot/conf/:/etc/letsencrypt/:rw
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
