--- a/public/known_users.json
+++ b/public/known_users.json
@@ -1,1 +1,1 @@
-{"U02PLSTMG90": "Jolien Eijsink", "U06QXUN2E9L": "Devlin", "U07C7A1L0TC": "Timeline"}
+{"U02PLSTMG90": "Jolien Eijsink", "U06QXUN2E9L": "Devlin", "U07C7A1L0TC": "Timeline", "U0675M5P1UG": "Dani\u00ebl Rios Mol", "U07FB8KCVME": "Sandra", "U04V6DLELQ4": "Stallon", "U06DFUFSRG8": "Femke", "U3WNT6MUJ": "Arwind Gajadien", "U07B8U73ZT8": "Fetch Usernames", "U04QUFZ80U8": "Carido Steinbach", "UNMDFHW81": "Kawish Gajadien", "U05EQ2K6Z8W": "Jarn\u00e9", "U05D7C80JE8": "Arnold", "U068G7FCK34": "Hidde"}
